Rewrite lake-jdbc from upstream
Drop the lake-client module and deprecated compatibility APIs while rebasing lake-jdbc onto the latest upstream refactor and preserving local workflow behavior.

Co-authored-by: Copilot <223556219+Copilot@users.noreply.github.com>