@@ -1,7 +1,7 @@
 # JDBC Driver
 
-Lake JDBC driver access lake distributions or lake cloud
-through [REST API]{https://lake.rs/doc/integrations/api/rest}.
+TiDB Cloud Lake JDBC driver access databend distributions or databend cloud
+through [REST API]{https://tidbcloud.com/doc/integrations/api/rest}.
 To use jdbc documentation, you could add the following dependency from maven central
 
 ```xml
@@ -30,31 +30,54 @@ jdbc:lake://host:port/database
 jdbc:lake://user:password@host:port/database
 ```
 
-For example, the following URL connects to lake host on your local machine with host `0.0.0.0` port `8000` and
-database `hello_lake`
-with username `lake` password `secret`
+For example, the following URL connects to databend host on your local machine with host `0.0.0.0` port `8000` and
+database `hello_databend`
+with username `databend` password `secret`
 
 ```text
-jdbc:lake://lake:secret@0.0.0.0:8000/hello_lake
+jdbc:lake://databend:secret@0.0.0.0:8000/hello_databend
 ```
 
 The above URL can be used as follows
 
 ```java 
-String url="jdbc:lake://lake:secret@0.0.0.0:8000/hello_lake"
+String url="jdbc:lake://databend:secret@0.0.0.0:8000/hello_databend"
         Connection conn=DriverManager.getConnection(url);
 ```
 
-If you are using [Lake Cloud](https://app.lake.com/), you can get a warehouse DSN according
-to [this doc](https://lake.rs/cloud/using-lake-cloud/warehouses#connecting).
+If you are using [TiDB Cloud](https://app.databend.com/), you can get a warehouse DSN according
+to [this doc](https://tidbcloud.com/cloud/using-databend-cloud/warehouses#connecting).
 Then the above URL within warehouse DSN can be used as follows:
 
 ```java 
-        String url="jdbc:lake://cloudapp:password@tnf34b0rm--elt-wh-medium.gw.aliyun-cn-beijing.default.lake.cn:443/db_name?ssl=true"
+        String url="jdbc:lake://cloudapp:password@tnf34b0rm--elt-wh-medium.gw.aliyun-cn-beijing.default.databend.cn:443/db_name?ssl=true"
         Connection conn=DriverManager.getConnection(url);
 ```
 
-Lake JDBC URLs accept a single host. Automatic node discovery, load balancing, and failover are not supported.
+TiDB Cloud Lake JDBC URLs accept a single host. Automatic node discovery, load balancing, and failover are not supported.
+
+## Arrow result format
+
+By default, query results are returned in JSON format. To fetch query results in Arrow format, set
+`query_result_format=arrow` in the JDBC URL:
+
+```text
+jdbc:lake://databend:secret@0.0.0.0:8000/hello_databend?query_result_format=arrow
+```
+
+Arrow mode is used for query result fetching. If `query_result_format` is not set, the driver uses JSON.
+
+When Arrow is enabled, start the JVM with:
+
+```shell
+export JAVA_TOOL_OPTIONS='--add-opens=java.base/java.nio=ALL-UNNAMED -Dio.netty.tryReflectionSetAccessible=true'
+```
+
+Or pass the same options directly to `java`:
+
+```shell
+java --add-opens=java.base/java.nio=ALL-UNNAMED -Dio.netty.tryReflectionSetAccessible=true -jar your-app.jar
+```
 
 ## Connection parameters
 
@@ -63,7 +86,7 @@ of the following examples are equivalent:
 
 ```java
 // URL parameters
-String url="jdbc:lake://lake:secret@0.0.0.0:8000/hello_lake";
+String url="jdbc:lake://databend:secret@0.0.0.0:8000/hello_databend";
         Properties properties=new Properties();
         properties.setProperty("user","test");
         properties.setProperty("password","secret");
@@ -71,7 +94,7 @@ String url="jdbc:lake://lake:secret@0.0.0.0:8000/hello_lake";
         Connection connection=DriverManager.getConnection(url,properties);
 
 // properties
-        String url="jdbc:lake://lake:secret@0.0.0.0:8000/hello_lake?user=test&password=secret&SSL=true";
+        String url="jdbc:lake://databend:secret@0.0.0.0:8000/hello_databend?user=test&password=secret&SSL=true";
         Connection connection=DriverManager.getConnection(url);
 ```
 
@@ -79,16 +102,18 @@ String url="jdbc:lake://lake:secret@0.0.0.0:8000/hello_lake";
 
 | Parameter              | Description                                                                                                               | Default       | example                                                                                                  |
 |------------------------|---------------------------------------------------------------------------------------------------------------------------|---------------|----------------------------------------------------------------------------------------------------------|
-| user                   | Lake user name                                                                                                        | none          | jdbc:lake://0.0.0.0:8000/hello_lake?user=test                                                    |
-| password               | Lake user password                                                                                                    | none          | jdbc:lake://0.0.0.0:8000/hello_lake?password=secret                                              |
-| SSL                    | Enable SSL                                                                                                                | false         | jdbc:lake://0.0.0.0:8000/hello_lake?SSL=true                                                     |
-| sslmode                | SSL mode                                                                                                                  | disable       | jdbc:lake://0.0.0.0:8000/hello_lake?sslmode=enable                                               |
-| copy_purge             | If True, the command will purge the files in the stage after they are loaded successfully into the table                  | false         | jdbc:lake://0.0.0.0:8000/hello_lake?copy_purge=true                                              |
-| presigned_url_disabled | whether use presigned url to upload data, generally if you use local disk as your storage layer, it should be set as true | false         | jdbc:lake://0.0.0.0:8000/hello_lake?presigned_url_disabled=true                                  |
-| wait_time_secs         | Restful query api blocking time, if the query is not finished, the api will block for wait_time_secs seconds              | 10            | jdbc:lake://0.0.0.0:8000/hello_lake?wait_time_secs=10                                            |
+| user                   | Lake user name                                                                                                        | none          | jdbc:lake://0.0.0.0:8000/hello_databend?user=test                                                    |
+| password               | Lake user password                                                                                                    | none          | jdbc:lake://0.0.0.0:8000/hello_databend?password=secret                                              |
+| SSL                    | Enable SSL                                                                                                                | false         | jdbc:lake://0.0.0.0:8000/hello_databend?SSL=true                                                     |
+| sslmode                | SSL mode                                                                                                                  | disable       | jdbc:lake://0.0.0.0:8000/hello_databend?sslmode=enable                                               |
+| copy_purge             | If True, the command will purge the files in the stage after they are loaded successfully into the table                  | false         | jdbc:lake://0.0.0.0:8000/hello_databend?copy_purge=true                                              |
+| presigned_url_disabled | whether use presigned url to upload data, generally if you use local disk as your storage layer, it should be set as true | false         | jdbc:lake://0.0.0.0:8000/hello_databend?presigned_url_disabled=true                                  |
+| presign                | Controls presign mode for data upload. Values: `auto` (enable for *.databend.com, *.databend.cn, *.tidbcloud.com hosts, disable otherwise), `detect` (probe the server to determine support), `on` (always enable), `off` (always disable). When set, takes precedence over presigned_url_disabled | none          | jdbc:lake://0.0.0.0:8000/hello_databend?presign=auto                                                |
+| query_result_format    | Query result format. Supported values: `json` and `arrow`. Default is `json`                                            | json          | jdbc:lake://0.0.0.0:8000/default?query_result_format=arrow                                          |
+| wait_time_secs         | Restful query api blocking time, if the query is not finished, the api will block for wait_time_secs seconds              | 10            | jdbc:lake://0.0.0.0:8000/hello_databend?wait_time_secs=10                                            |
 | max_rows_per_page      | the maximum rows per page in response data body                                                                           | 100000        | jdbc:lake://0.0.0.0:8000/default?max_rows_per_page=100000                                            |
-| null_display           | null value display                                                                                                        | \N            | jdbc:lake://0.0.0.0:8000/hello_lake?null_display=null                                            |
+| null_display           | null value display                                                                                                        | \N            | jdbc:lake://0.0.0.0:8000/hello_databend?null_display=null                                            |
 | binary_format          | binary format, support hex and base64                                                                                     | hex           | jdbc:lake://0.0.0.0:8000/default?binary_format=hex                                                   |
 | use_verify             | whether verify the server before establishing the connection                                                              | true          | jdbc:lake://0.0.0.0:8000/default?use_verify=true                                                     |
 | debug                  | whether enable debug mode                                                                                                 | false         | jdbc:lake://0.0.0.0:8000/default?debug=true                                                          |
-| session_settings | set lake session settings                                                                                             | ""            | jdbc:lake://0.0.0.0:8000/default?session_settings="key1=value1,key2=value2"                          |
+| session_settings | set databend session settings                                                                                             | ""            | jdbc:lake://0.0.0.0:8000/default?session_settings="key1=value1,key2=value2"                          |
